--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reddit-clone",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -24,18 +25,18 @@
     "@mantine/hooks": "^6.0.13",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.29.11",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
-    "@uploadthing/react": "^4.0.0",
+    "@uploadthing/react": "^5.0.0",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -51,6 +52,7 @@
     "nanoid": "^4.0.2",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.23",
     "prisma": "^4.14.1",
     "react": "18.2.0",
@@ -64,7 +66,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
-    "uploadthing": "^4.0.0",
+    "uploadthing": "^5.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
