add form questionaire

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "editorjs-react-renderer": "^3.5.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^11.3.31",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.419.0",
     "nanoid": "^4.0.2",
@@ -59,6 +60,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.2",
+    "react-hook-form-persist": "^3.0.0",
     "react-textarea-autosize": "^8.4.1",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
