--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nanoid": "^4.0.2",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
+    "next-swagger-doc": "^0.4.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.23",
     "prisma": "^4.14.1",
@@ -65,6 +66,7 @@
     "react-textarea-autosize": "^8.4.1",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
+    "swagger-ui-react": "^5.17.14",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
