--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/swagger-ui-react": "^4.18.3",
     "@uploadthing/react": "^6.7.2",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
