--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "swagger-ui-react": "^5.17.14",
+    "sweetalert2": "^11.14.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
