--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/paragraph": "^2.9.0",
     "@editorjs/table": "^2.2.1",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@hookform/resolvers": "^3.1.0",
     "@mantine/hooks": "^6.0.13",
     "@next-auth/prisma-adapter": "^1.0.6",
@@ -50,6 +53,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^11.3.31",
+    "fullcalendar": "^6.1.15",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.419.0",
     "nanoid": "^4.0.2",
