--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/editorjs__header": "^2.6.0",
